docs/api/qiskit-ibm-runtime/0.25/qiskit_ibm_runtime.options.SamplerExecutionOptionsV2.mdx
---
title: SamplerExecutionOptionsV2 (v0.25)
description: API reference for qiskit_ibm_runtime.options.SamplerExecutionOptionsV2 in qiskit-ibm-runtime v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.SamplerExecutionOptionsV2
---

# SamplerExecutionOptionsV2

<Class id="qiskit_ibm_runtime.options.SamplerExecutionOptionsV2" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.25/qiskit_ibm_runtime/options/sampler_execution_options.py#L19-L51" signature="SamplerExecutionOptionsV2(*args, **kwargs)" modifiers="class">
  Extension of [`ExecutionOptionsV2`](qiskit_ibm_runtime.options.ExecutionOptionsV2 "qiskit_ibm_runtime.options.ExecutionOptionsV2") for the sampler primitive.

  ## Attributes

  ### init\_qubits

  <Attribute id="qiskit_ibm_runtime.options.SamplerExecutionOptionsV2.init_qubits" attributeTypeHint="UnsetType | bool" attributeValue="Unset">
    Whether to reset the qubits to the ground state for each shot. Default is `True`.
  </Attribute>

  ### meas\_type

  <Attribute id="qiskit_ibm_runtime.options.SamplerExecutionOptionsV2.meas_type" attributeTypeHint="UnsetType | Literal['classified', 'kerneled', 'avg_kerneled']" attributeValue="Unset">
    How to process and return measurement results.

    This option sets the return type of all classical registers in all `SamplerPubResult`s. If a sampler pub with shape `pub_shape` has a circuit that contains a classical register with size `creg_size`, then the returned data associated with this register will have one of the following formats depending on the value of this option.

    *   `"classified"`: A `BitArray` of shape `pub_shape` over `num_shots` with a number of bits equal to `creg_size`.
    *   `"kerneled"`: A complex NumPy array of shape `(*pub_shape, num_shots, creg_size)`, where each entry represents an IQ data point (resulting from kerneling the measurement trace) in arbitrary units.
    *   `"avg_kerneled"`: A complex NumPy array of shape `(*pub_shape, creg_size)`, where each entry represents an IQ data point (resulting from kerneling the measurement trace and averaging over shots) in arbitrary units. This option is equivalent to selecting `"kerneled"` and then averaging over the shots axis, but requires less data bandwidth.

    Default: “classified”.

    See [here](https://pubs.aip.org/aip/rsi/article/88/10/104703/836456) for a description of kerneling.
  </Attribute>

  ### rep\_delay

  <Attribute id="qiskit_ibm_runtime.options.SamplerExecutionOptionsV2.rep_delay" attributeTypeHint="UnsetType | float" attributeValue="Unset">
    The repetition delay. This is the delay between a measurement and the subsequent quantum circuit. This is only supported on backends that have `backend.dynamic_reprate_enabled=True`. It must be from the range supplied by `backend.rep_delay_range`. Default is given by `backend.default_rep_delay`.
  </Attribute>

  ## Methods
</Class>

